# BetterConfigs

./: .gitignore  README.md  betterconfigs.py  buildscript.sh  pyproject.toml  test_conf.py  teststest.config
src/betterconfigs/: __init__.py  utilities.py
tests/: test.config
