[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "betterconfigs"
version = "0.8.1"
authors = [
  { name="Iain Rosen", email="hello@iainrosen.me" },
]
description = "A small package to simplify configuration storing and retrieving"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "pickle",
  "warnings",
  "cryptography",
]
[project.urls]
"Homepage" = "https://github.com/iainrosen/betterconfigs"
"Bug Tracker" = "https://github.com/iainrosen/betterconfigs/issues"